--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Dependencies -->
 
     <link rel="stylesheet" type="text/css" href="bower_components/fullpage.js/jquery.fullPage.css"/>
-    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="bower_components/fullpage.js/jquery.fullPage.js"></script>
 
     <!-- Styling -->
