Added padding to mail icon and image hover effect

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Colten Cross</title>
 
     <!-- Favicon -->
+
     <link rel="shortcut icon" href="images/favicon.ico"/>
 
     <!-- Dependencies -->
@@ -42,6 +43,7 @@
 <div id="fullpage">
 
     <!-- About section -->
+
     <div class="section about">
         <img class="img_rounded" id="me" src="images/me.jpg">
         <h1>Colten Cross</h1>
@@ -50,6 +52,7 @@
     </div>
 
     <!-- Projects section -->
+
     <div class="section projects" data-anchor="projects">
         <div class="slide active">
             <h1>Here are some projects I'm working on...</h1>
@@ -73,21 +76,24 @@
     </div>
 
     <!-- Resume section -->
+
     <div class="section resume">
         <h1>...and here's my resume</h1>
-        <a href="resume/resume_ColtenCross.pdf" target="_blank"><img src="images/resume.png"></a>
+        <a href="resume/resume_ColtenCross.pdf" target="_blank"><img id="resume_img" src="images/resume.png"></a>
     </div>
 
     <!-- Contact section -->
+
     <div class="section contact">
         <h1>I'd love to hear from you!</h1>
-        <a href="mailto:colten@coltencross.com" target="_top"><img id="mail" src="images/mail.png"></a>
+        <a href="mailto:colten@coltencross.com" target="_top"><img id="mail_img" src="images/mail.png"></a>
         <h3>colten@coltencross.com</h3>
     </div>
 
 </div>
 
 <!-- fullPage JS init -->
+
 <script type="text/javascript">
     $(document).ready(function () {
         $('#fullpage').fullpage({
