Updated resume and projects

--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
 
     <div class="section projects" data-anchor="projects">
         <div class="slide active">
-            <h1>Here are some projects I'm working on...</h1>
+            <h1>Here are some projects I've worked on...</h1>
+        </div>
+        <div  class="slide overdrive">
+            <h1>Project Overdrive</h1>
+            <a href="https://github.com/ProjectOverdrive/mainApp" target="_blank"><img id="gear_img" src="images/overdrive.png"></a>
+            <h3>The final project for my Software Engineering class. A full-scale application for managing
+                a mechanic shop.</h3>
+            <h3>Written entirely in Java with SQLite for the database.</h3>
         </div>
         <div class="slide muon">
             <h1>Muon Telescope</h1>
@@ -64,14 +71,6 @@
             <h3>A website for displaying data from Georgia State University’s cosmic ray detectors.</h3>
             <h3>Written almost entirely in Polymer. Dynamically builds itself based on number
                 of detectors in a database.</h3>
-        </div>
-        <div class="slide overdrive">
-            <h1>Project Overdrive</h1>
-            <h2>(unfinished)</h2>
-            <img src="images/overdrive.png">
-            <h3>The final project for my Software Engineering class. A full-scale application for managing
-                a mechanic shop.</h3>
-            <h3>Written entirely in Java with SQLite for the database.</h3>
         </div>
     </div>
 
