Updated muon telescope description

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <h2>(unfinished)</h2>
             <a href="http://www.muontelescope.com/" target="_blank"><img id="muon_img" src="images/muon.jpg"></a>
             <h3>A website for displaying data from Georgia State University’s cosmic ray detectors.</h3>
-            <h3>Written almost entirely in Polymer. Dynamically builds itself based on number
+            <h3>Written using HTML, CSS, JS, Polymer, and MySQL. Dynamically builds itself based on number
                 of detectors in a database.</h3>
         </div>
     </div>
