Updated description for graduation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <img class="img_rounded" id="me" src="images/me.jpg">
         <h1>Colten Cross</h1>
         <h2>Welcome!</h2>
-        <h3>I'm a senior Physics and Computer Science student at Georgia State University</h3>
+        <h3>I'm a Physics and Computer Science graduate from Georgia State University</h3>
     </div>
 
     <!-- Projects section -->
