--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <!-- End General Info -->
 
                     <!-- Resume -->
-                    <a href="resume/resume_ColtenCross.pdf" target="_top"><p>
+                    <a href="resume/resume_ColtenCross.pdf" target="_blank"><p>
                         <i class="fa fa-file-text fa-fw w3-margin-right w3-large w3-text-blue"></i>Resume</p>
                     </a>
                     <!-- End Resume -->
