--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <!-- About me -->
                     <p class="w3-large"><b><i class="fa fa-user fa-fw w3-margin-right w3-text-blue"></i>About me</b></p>
                     <p>My name is Colten Cross and I'm a recent graduate from Georgia State University in Atlanta,
-                        GA. I recently moved back home to Columbus and hope to get a job in Information Security or
+                        GA. I recently moved back home to Columbus and am seeking a job in Information Security or
                         Software Development.
-                        In my free time if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
+                        In my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
                         Minecraft or spending time with my family and friends.
                     </p>
                     <!-- End About me -->
@@ -55,7 +55,7 @@
                         <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>colten@coltencross.com
                     </p>
                     </a>
-                    <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>(762) 207-0132</p>
+                    <a href="tel:+1-762-207-0132"><p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>(762) 207-0132</p></a>
                     <!-- End General Info -->
 
                     <!-- Resume -->
@@ -101,15 +101,19 @@
                 <div class="w3-container">
                     <a href="http://www.muontelescope.com" target="_blank"><h5 class="w3-opacity"><b>Muon Telescope</b>
                     </h5></a>
+                    <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - May 2017
+                    </h6>
                     <p>I helped design and build a website for displaying data from Georgia State University’s cosmic
                         ray detectors.
-                        It was created using HTML, CSS, JS, Polymer, and MySQL. The websute dynamically builds itself
+                        It was created using HTML, CSS, JS, Polymer, and MySQL. The website dynamically builds itself
                         based on the number of detectors currently in the database.</p>
                     <hr>
                 </div>
                 <div class="w3-container">
                     <a href="http://github.com/ProjectOverdrive/mainApp" target="_blank"><h5 class="w3-opacity"><b>Project
                         Overdrive</b></h5></a>
+                    <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - May 2017
+                    </h6>
                     <p>The final project for my Software Engineering class. A full-scale application for managing a
                         mechanic shop written entirely in Java with SQLite for the database.
                     </p>
