--- a/index.html
+++ b/index.html
@@ -37,8 +37,7 @@
                     <!-- About me -->
                     <p class="w3-large"><b><i class="fa fa-user fa-fw w3-margin-right w3-text-blue"></i>About me</b></p>
                     <p>My name is Colten Cross and I'm a recent graduate from Georgia State University in Atlanta,
-                        GA. I recently moved back home to Columbus and am seeking a job in Information Security or
-                        Software Development.
+                        GA. I'm currently living in Columbus and am seeking a career in Software Development.
                         In my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
                         Minecraft or spending time with my family and friends.
                     </p>
@@ -47,7 +46,7 @@
                     <!-- General Info -->
 
                     <!-- TODO: Uncomment once no longer a bum-->
-                    <!--<p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Cybersecurity Analyst</p>-->
+                    <!--<p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Software Engineer</p>-->
 
                     <a href="https://www.google.com/maps?q=Columbus+GA" target="_blank"><p><i
                             class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Columbus, GA</p></a>
@@ -77,7 +76,7 @@
             <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
                 <h2 class="w3-text-grey w3-padding-16"><i
                         class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Skills</h2>
-                <p>Information Technology, Programming, Physics</p>
+                <p>Programming, Information Technology, Physics</p>
             </div>
             <!-- End Skills -->
 
