--- a/index.html
+++ b/index.html
@@ -36,25 +36,22 @@
 
                     <!-- About me -->
                     <p class="w3-large"><b><i class="fa fa-user fa-fw w3-margin-right w3-text-blue"></i>About me</b></p>
-                    <p>My name is Colten Cross and I'm a recent graduate from Georgia State University in Atlanta,
-                        GA. I'm currently living in Columbus and am seeking a career in Software Development.
-                        In my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
-                        Minecraft or spending time with my family and friends.
+                    <p>My name is Colten Cross and I'm a Web Developer Intern at Cartoon Network in Atlanta,
+                        GA. In my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
+                        The Wticher 3 or spending time with my family and friends.
                     </p>
                     <!-- End About me -->
 
                     <!-- General Info -->
 
-                    <!-- TODO: Uncomment once no longer a bum-->
-                    <!--<p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Software Engineer</p>-->
+                    <a href="http://www.cartoonnetwork.com/" target="_blank"><p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Web Developer Intern</p></a>
 
-                    <a href="https://www.google.com/maps?q=Columbus+GA" target="_blank"><p><i
-                            class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Columbus, GA</p></a>
+                    <a href="https://www.google.com/maps?q=Atlanta+GA" target="_blank"><p><i
+                            class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Atlanta, GA</p></a>
                     <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><p>
                         <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>colten@coltencross.com
                     </p>
                     </a>
-                    <a href="tel:+1-762-207-0132"><p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-blue"></i>(762) 207-0132</p></a>
                     <!-- End General Info -->
 
                     <!-- Resume -->
@@ -98,7 +95,7 @@
                 <h2 class="w3-text-grey w3-padding-16"><i
                         class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Projects</h2>
                 <div class="w3-container">
-                    <a href="http://www.muontelescope.com" target="_blank"><h5 class="w3-opacity"><b>Muon Telescope</b>
+                    <a href="https://github.com/muonTelescope/muonTelescopeServer" target="_blank"><h5 class="w3-opacity"><b>Muon Telescope</b>
                     </h5></a>
                     <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - May 2017
                     </h6>
