Updated theme and about me picture

--- a/index.html
+++ b/index.html
@@ -12,130 +12,154 @@
 <link href="css/index.css" rel="stylesheet">
 
 <!-- Favicon -->
-<link rel="shortcut icon" href="images/favicon.ico"/>
+<link rel="shortcut icon" href="images/favicon.ico" />
 
 <body class="w3-grey">
 
-<!-- Page Container -->
-<div class="w3-content w3-margin-top" style="max-width:1300px;">
+    <!-- Background Image Container -->
+    <div id="background">
+        <!-- Page Container -->
+        <div class="w3-content" style="max-width:1300px;">
 
-    <!-- The Grid -->
-    <div class="w3-row-padding">
+            <!-- The Grid -->
+            <div class="w3-row-padding w3-margin-top" >
 
-        <!-- Left Column -->
-        <div class="w3-third">
+                <!-- Left Column -->
+                <div class="w3-third">
 
-            <div class="w3-white w3-text-grey w3-card-4">
-                <div class="w3-display-container">
-                    <img src="images\me.jpg" style="width:100%" alt="Avatar">
-                    <div class="w3-display-bottomleft w3-container w3-text-black">
-                        <h2 class="w3-xxlarge">Colten Cross</h2>
+                    <div class="w3-white w3-text-grey w3-card-4">
+                        <div class="w3-display-container">
+                            <img src="images\me.jpg" style="width:100%" alt="Avatar">
+                            <div class="w3-display-bottomleft w3-container w3-text-black">
+                                <h2 class="w3-xxlarge">Colten Cross</h2>
+                            </div>
+                        </div>
+                        <div class="w3-container">
+
+                            <!-- About me -->
+                            <p class="w3-large">
+                                <b>
+                                    <i class="fa fa-user fa-fw w3-margin-right w3-text-teal"></i>About me</b>
+                            </p>
+                            <p>Hi! My name is Colten Cross and I'm a Web Developer Intern at Cartoon Network in Atlanta, GA. In
+                                my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing The
+                                Wticher 3 or spending time with my family and friends.
+                            </p>
+                            <!-- End About me -->
+
+                            <!-- General Info -->
+
+                            <a href="http://www.cartoonnetwork.com/" target="_blank">
+                                <p>
+                                    <i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Web Developer Intern</p>
+                            </a>
+
+                            <a href="https://www.google.com/maps?q=Atlanta+GA" target="_blank">
+                                <p>
+                                    <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Atlanta, GA</p>
+                            </a>
+                            <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
+                                <p>
+                                    <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>colten@coltencross.com
+                                </p>
+                            </a>
+                            <!-- End General Info -->
+
+                            <!-- Resume -->
+                            <a href="resume/resume_ColtenCross.pdf" target="_blank">
+                                <p>
+                                    <i class="fa fa-file-text fa-fw w3-margin-right w3-large w3-text-teal"></i>Resume</p>
+                            </a>
+                            <!-- End Resume -->
+                        </div>
                     </div>
+                    <br>
+
                 </div>
-                <div class="w3-container">
+                <!-- End Left Column -->
 
-                    <!-- About me -->
-                    <p class="w3-large"><b><i class="fa fa-user fa-fw w3-margin-right w3-text-blue"></i>About me</b></p>
-                    <p>My name is Colten Cross and I'm a Web Developer Intern at Cartoon Network in Atlanta,
-                        GA. In my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
-                        The Wticher 3 or spending time with my family and friends.
-                    </p>
-                    <!-- End About me -->
+                <!-- Right Column -->
+                <div class="w3-twothird">
 
-                    <!-- General Info -->
+                    <!-- Skills -->
+                    <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+                        <h2 class="w3-text-grey w3-padding-16">
+                            <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skills</h2>
+                        <p>HTML/CSS - JavaScript - Git - jQuery - Java - Polymer - SQL - Bootstrap</p>
+                    </div>
+                    <!-- End Skills -->
 
-                    <a href="http://www.cartoonnetwork.com/" target="_blank"><p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-blue"></i>Web Developer Intern</p></a>
+                    <!-- Education -->
+                    <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+                        <h2 class="w3-text-grey w3-padding-16">
+                            <i class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Education</h2>
+                        <div class="w3-container">
+                            <h5 class="w3-opacity">
+                                <b>Georgia State University</b>
+                            </h5>
+                            <h6 class="w3-text-teal">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2014 - May 2017
+                            </h6>
+                            <p>Bachelor of Science in Physics, Computer Science concentration</p>
+                        </div>
+                    </div>
+                    <!-- End Education -->
 
-                    <a href="https://www.google.com/maps?q=Atlanta+GA" target="_blank"><p><i
-                            class="fa fa-home fa-fw w3-margin-right w3-large w3-text-blue"></i>Atlanta, GA</p></a>
-                    <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top"><p>
-                        <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-blue"></i>colten@coltencross.com
-                    </p>
-                    </a>
-                    <!-- End General Info -->
+                    <!-- Projects -->
+                    <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
+                        <h2 class="w3-text-grey w3-padding-16">
+                            <i class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects</h2>
+                        <div class="w3-container">
+                            <a href="https://github.com/muonTelescope/muonTelescopeServer" target="_blank">
+                                <h5 class="project_title">Muon Telescope</h5>
+                            </a>
+                            <h6 class="w3-text-teal">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - May 2017
+                            </h6>
+                            <p>I helped design and build a website for displaying data from Georgia State University’s cosmic
+                                ray detectors. It was created using HTML, CSS, JS, Polymer, and MySQL. The website dynamically
+                                builds itself based on the number of detectors currently in the database.</p>
+                            <hr>
+                        </div>
+                        <div class="w3-container">
+                            <a href="http://github.com/ProjectOverdrive/mainApp" target="_blank">
+                                <h5 class="project_title">Project Overdrive</h5>
+                            </a>
+                            <h6 class="w3-text-teal">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - May 2017
+                            </h6>
+                            <p>The final project for my Software Engineering class. A full-scale application for managing a
+                                mechanic shop written entirely in Java with SQLite for the database.
+                            </p>
+                            <hr>
+                        </div>
+                    </div>
+                    <!-- End Projects -->
 
-                    <!-- Resume -->
-                    <a href="resume/resume_ColtenCross.pdf" target="_blank"><p>
-                        <i class="fa fa-file-text fa-fw w3-margin-right w3-large w3-text-blue"></i>Resume</p>
-                    </a>
-                    <!-- End Resume -->
                 </div>
+                <!-- End Right Column -->
+
             </div>
-            <br>
+            <!-- End Grid -->
 
         </div>
-        <!-- End Left Column -->
-
-        <!-- Right Column -->
-        <div class="w3-twothird">
-
-            <!-- Skills -->
-            <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-                <h2 class="w3-text-grey w3-padding-16"><i
-                        class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Skills</h2>
-                <p>Programming, Information Technology, Physics</p>
-            </div>
-            <!-- End Skills -->
-
-            <!-- Education -->
-            <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-                <h2 class="w3-text-grey w3-padding-16"><i
-                        class="fa fa-graduation-cap fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Education</h2>
-                <div class="w3-container">
-                    <h5 class="w3-opacity"><b>Georgia State University</b></h5>
-                    <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Aug 2014 - May 2017
-                    </h6>
-                    <p>Bachelor of Science in Physics, Computer Science concentration</p>
-                </div>
-            </div>
-            <!-- End Education -->
-
-            <!-- Projects -->
-            <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
-                <h2 class="w3-text-grey w3-padding-16"><i
-                        class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-blue"></i>Projects</h2>
-                <div class="w3-container">
-                    <a href="https://github.com/muonTelescope/muonTelescopeServer" target="_blank"><h5 class="w3-opacity"><b>Muon Telescope</b>
-                    </h5></a>
-                    <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - May 2017
-                    </h6>
-                    <p>I helped design and build a website for displaying data from Georgia State University’s cosmic
-                        ray detectors.
-                        It was created using HTML, CSS, JS, Polymer, and MySQL. The website dynamically builds itself
-                        based on the number of detectors currently in the database.</p>
-                    <hr>
-                </div>
-                <div class="w3-container">
-                    <a href="http://github.com/ProjectOverdrive/mainApp" target="_blank"><h5 class="w3-opacity"><b>Project
-                        Overdrive</b></h5></a>
-                    <h6 class="w3-text-blue"><i class="fa fa-calendar fa-fw w3-margin-right"></i>Jan 2017 - May 2017
-                    </h6>
-                    <p>The final project for my Software Engineering class. A full-scale application for managing a
-                        mechanic shop written entirely in Java with SQLite for the database.
-                    </p>
-                    <hr>
-                </div>
-            </div>
-            <!-- End Projects -->
-
-        </div>
-        <!-- End Right Column -->
-
+        <!-- End Page Container -->
     </div>
-    <!-- End Grid -->
+    <!-- End Background Image Container -->
 
-</div>
-<!-- End Page Container -->
-
-<!-- Footer -->
-<footer class="w3-container w3-white w3-center w3-margin-top">
-    <p>Check me out on social media.</p>
-    <a href="https://github.com/ColCross" target="_blank"><i class="fa fa-github w3-xlarge w3-hover-opacity"></i></a>
-    <a href="https://www.linkedin.com/in/coltencross/" target="_blank"><i
-            class="fa fa-linkedin w3-hover-opacity w3-xlarge"></i></a>
-    <p></p>
-</footer>
-<!-- End Footer -->
+    <!-- Footer -->
+    <footer class="w3-container w3-white w3-center">
+        <p>Check me out on social media.</p>
+        <a href="https://github.com/ColCross" target="_blank">
+            <i class="fa fa-github w3-xlarge w3-hover-opacity"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/coltencross/" target="_blank">
+            <i class="fa fa-linkedin w3-hover-opacity w3-xlarge"></i>
+        </a>
+        <p></p>
+    </footer>
+    <!-- End Footer -->
 
 </body>
+
 </html>
