Fixed a typo in About Me

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </p>
                             <p>Hi! My name is Colten Cross and I'm a Web Developer Intern at Cartoon Network in Atlanta, GA. In
                                 my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing The
-                                Wticher 3 or spending time with my family and friends.
+                                Witcher 3 or spending time with my family and friends.
                             </p>
                             <!-- End About me -->
 
