Updated resume and email to match new URL

--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
                                 <p>
                                     <i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Atlanta, GA</p>
                             </a>
-                            <a href="mailto:someone@example.com?Subject=Hello%20again" target="_top">
+                            <a href="mailto:colten@cwcross.com?Subject=Hello" target="_top">
                                 <p>
-                                    <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>colten@coltencross.com
+                                    <i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>colten@cwcross.com
                                 </p>
                             </a>
                             <!-- End General Info -->
