--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html>
-<title>Colten Cross</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Imports -->
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href="css/index.css" rel="stylesheet">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Favicon -->
-<link rel="shortcut icon" href="images/favicon.ico" />
+    <title>Colten Cross</title>
+
+    <!-- Imports -->
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+
+    <!-- Favicon -->
+    <link rel="shortcut icon" href="images/favicon.ico" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108224528-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-108224528-1');
+    </script>
+
+
+</head>
 
 <body class="w3-grey">
 
@@ -22,7 +38,7 @@
         <div class="w3-content" style="max-width:1300px;">
 
             <!-- The Grid -->
-            <div class="w3-row-padding w3-margin-top" >
+            <div class="w3-row-padding w3-margin-top">
 
                 <!-- Left Column -->
                 <div class="w3-third">
@@ -41,9 +57,9 @@
                                 <b>
                                     <i class="fa fa-user fa-fw w3-margin-right w3-text-teal"></i>About me</b>
                             </p>
-                            <p>Hi! My name is Colten Cross and I'm a Web Developer Intern at Cartoon Network in Atlanta, GA. In
-                                my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing The
-                                Witcher 3 or spending time with my family and friends.
+                            <p>Hi! My name is Colten Cross and I'm a Web Developer Intern at Cartoon Network in Atlanta, GA.
+                                In my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
+                                The Witcher 3 or spending time with my family and friends.
                             </p>
                             <!-- End About me -->
 
