Added PHP project, reordered skills

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                     <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
                         <h2 class="w3-text-grey w3-padding-16">
                             <i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Skills</h2>
-                        <p>HTML/CSS - JavaScript - Git - jQuery - Java - Polymer - SQL - Bootstrap</p>
+                        <p>JavaScript - HTML/CSS - Git - jQuery - Java - Polymer - SQL - Bootstrap</p>
                     </div>
                     <!-- End Skills -->
 
@@ -125,6 +125,20 @@
                     <div class="w3-container w3-card-2 w3-white w3-margin-bottom">
                         <h2 class="w3-text-grey w3-padding-16">
                             <i class="fa fa-wrench fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Projects</h2>
+                        <div class="w3-container">
+                            <a href="https://github.com/muonTelescope/muonTelescopeServer" target="_blank">
+                                <h5 class="project_title">Dog's Out of the Bag</h5>
+                            </a>
+                            <h6 class="w3-text-teal">
+                                <i class="fa fa-calendar fa-fw w3-margin-right"></i>Oct 2017 - Present
+                            </h6>
+                            <p>
+                                I created a small, unfinished blog template in order to learn PHP and the Symfony framework.
+                                It implements full Model View Control, and currently allows editing and deleting posts stored
+                                in a MySQL database.
+                            </p>
+                            <hr>
+                        </div>
                         <div class="w3-container">
                             <a href="https://github.com/muonTelescope/muonTelescopeServer" target="_blank">
                                 <h5 class="project_title">Muon Telescope</h5>
