Updated job title and about me

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                                 <b>
                                     <i class="fa fa-user fa-fw w3-margin-right w3-text-teal"></i>About me</b>
                             </p>
-                            <p>Hi! My name is Colten Cross and I'm a Web Developer Intern at Cartoon Network in Atlanta, GA.
+                            <p>Hi! My name is Colten Cross and I'm a Software Developer at Turner and CNN in Atlanta, GA.
                                 In my free time, if I'm not watching CGP Grey or Kurzgesagt videos on YouTube, I'm playing
                                 The Witcher 3 or spending time with my family and friends.
                             </p>
@@ -65,9 +65,9 @@
 
                             <!-- General Info -->
 
-                            <a href="http://www.cartoonnetwork.com/" target="_blank">
+                            <a href="http://www.cnn.com/" target="_blank">
                                 <p>
-                                    <i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Web Developer Intern</p>
+                                    <i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>Advanced Software Developer</p>
                             </a>
 
                             <a href="https://www.google.com/maps?q=Atlanta+GA" target="_blank">
